--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+## Configuración de la aplicación
+##app:
+##  nombre: MiAplicacion
+#
+#
+#spring:
+#
+##    --> DB Local
+#datasource:
+#url: jdbc:mysql://localhost:3307/codo_a_codo_tpi
+#username: root
+#password: root
+##  driver-class-name: com.mysql.cj.jdbc.Driver
+#
+#jpa:
+#hibernate:
+#ddl-auto: update
+##
+#
+# Configuración de la aplicación
+#app.nombre=MiAplicacion
 
+# Configuración de la base de datos local
+spring.datasource.url=jdbc:mysql://localhost:3307/codo_a_codo_tpi
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA y Hibernate
+spring.jpa.hibernate.ddl-auto=update
